# docs/swagger.yaml
@@ -15,17 +15,8 @@ definitions:
     required:
     - name
     type: object
-host: localhost:8080
 info:
-  contact:
-    email: support@swagger.io
-    name: API Support
-    url: http://www.swagger.io/support
-  description: This is a sample server for managing categories.
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
+  contact: {}
   title: Category API
   version: "1.0"
 paths:
@@ -160,4 +151,18 @@ paths:
       summary: Update a category
       tags:
       - categories
+  /health:
+    get:
+      description: Get current status, uptime, CPU, and RAM usage
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get application health and system metrics
+      tags:
+      - health
 swagger: "2.0"
